# netmath-front-end

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dioxus.toml  Dockerfile  README.md  deploy-docker-compose.template  docker-compose.yml  index.html  run.sh  style.css
conf.d/: 000-default.conf
patches/: dx-patch.diff
services.d/netmath/: run
src/: main.rs
