[package]
name = "netmath"
version = "1.0.0"
authors = ["root"]
edition = "2021"

[profile.dev]
strip = true
opt-level = 1

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }

dioxus = { version = "0.5", features = ["liveview", "axum", "router"] }
axum = { version = "0.7.4", features = ["ws"] }

# Debug
dioxus-logger = "0.5.1"
