[package]
name = "netmath-front-end"
version = "1.0.0"
edition = "2021"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.2.0"
